public/styles.css
@font-face {
  font-family: 'Apercu Regular';
  src: url('fonts/Apercu-Regular.otf');
}
@font-face {
  font-family: 'Moderat Regular';
  src: url('fonts/Moderat-Regular.woff');
}
:root {
  --main-background: rgb(248, 245, 243);
  --main-green: #4FDCD2;
  --main-red: rgb(255, 51, 53);
  --main-brown: rgb(222, 210, 192);
}
body {
  font-family: 'Apercu Regular';
  letter-spacing: 0.5px;
  background-color: var(--main-background);
  margin: 0;
  font-size: 16px;
}
a {
  text-decoration: none;
  color: inherit;
}
a:hover {
  font-weight: 800;
  color: var(--main-green);
}
/* ---- NAV ------- */

nav {
  display: flex;
  width: 100vw;
  justify-content: space-between;
  position: fixed;
}
nav {
  padding: 2vh 6vw 0 5vw;
}
.cherri:hover, .about div:hover, .modal-link:hover {
  font-weight: 800;
  cursor: pointer;
  color: var(--main-green);
}
.about {
  display: flex;
  justify-content: flex-end;
  padding-right: 10vw;
}
.about div {
  padding-right: 20px;
}

.projects:hover {
  font-weight: 800;
  cursor: pointer;
  color: var(--main-green);
}
/* ---------FOOTER----------- */
.home-footer {
  position: fixed;
  bottom: 0;
  width: 100vw;
  display: flex;
  justify-content: space-between;
}
.social {
  padding: 0 6vw 5vh 5vw;
}
.score {
  color: var(--main-brown);
  text-align: center;
}
#points {
  font-size: 24px;
  padding-top: 10px;
}
#points-text {
  line-height: 0.5;
}
.projects {
  padding: 0 6vw 5vh 5vw;
}
.projects img {
  max-width: 18px;
  padding-left: 8px;
}
.designed {
  color: var(--main-brown);
  text-align: center;
}
.designed a {
  color: inherit;  
}
.designed a:hover {
  color: var(--main-green);
}

/* ----------MODAL---------- */
.modal-wrapper {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  z-index: 9998;
  background: rgba(0, 0, 0, 0.3);
}
.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 9999;
  background: var(--main-background);
  border-radius: 20px;
}
.modal-title {
  text-align: center;
  padding: 20px 40px 0;
  font-size: 55px;
  font-family: 'Moderat Regular';
}
.modal-body {
  padding: 0 40px 30px;
  font-size: 20px;
  text-align: center;
  width: 34vw;
}
.modal-cherri {
  color: var(--main-red);
}
.close-modal-btn {
  float: right;
  cursor: pointer;
  font-size: 40px;
  padding-right: 20px;
}
.close-modal-btn:hover {
  cursor: pointer;
  color: var(--main-green);
}
.back-drop {
  background-color: rgba(48, 49, 48, 0.42);
  height: 100%;
  position: fixed;
  transition: all 1.3s;
  width: 100%;
}
/* ---- WORLD STYLES ---- */

.world-container {
  display: flex;
  justify-content: center;
  font-family: 'Moderat Regular';
  height: 100vh;
  width: 100vw;
  align-items: center;
}
#world {
  font-size: 3em;
  margin-bottom: 12vh;
}
#pac, #pacdies, .ghost, .world-char, .world-letter, .space, .cherry, .eaten {
  display: inline-block;
}
#pac img, .ghost img {
  height: 50px;
}
.ghost {
  width: 25px;
}
#pacdies img {
  height: 56px;
}
.cherry img {
  width: 40px;
}
.space {
  width: 10px;
}
.eaten {
  width: 25px;
}

/* ---------- PROJECTS ---------- */
.project-container {
  background-color: var(--main-background);
}
h1 {
  margin: 10px 0;
  font-family: 'Moderat Regular';
}
.grid-container {
  padding-top: 10vh;
  display: grid;
  grid-template-columns: 25% 25%;
  justify-content: center;
  grid-gap: 0 5vw;
  height: 90vh;
}
.grid-element {
  font-size: 16px;
  height: 310px;
  width: 270px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 25px;
  margin-top: -80px;
  padding-right: 25px;
}
.grid-element p {
  margin: 5px 0;
}
.grid-element:hover {
  background-image: url(https://s3-us-west-1.amazonaws.com/cherri-portfolio/big_cherri.png);
  background-repeat: no-repeat;
  background-size: contain;
  cursor: pointer;
  text-align: center;
  font-size: 14px;
  z-index: 999;
  height: 500px;
  margin-top: -260px;
  padding-top: 80px;
  padding-left: 45px;
}
.projects-footer {
  padding: 2vh 6vw 0 5vw;
  position: fixed;
  bottom: 5vh;
}
.projects-photo-preview {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 998
}


/* ---------- PROJECT LIGHTBOX ------- */

.lightbox-container {
  background-color: black;
  width: 100vw;
  height: 100vh;
  display: flex;
}
.lightbox-footer {
  padding: 2vh 6vw 0 2vw;
  position: fixed;
  bottom: 6vh;
  color: #ffffff;
}
.lightbox-footer:hover {
  color: var(--main-green);
  font-weight: 800;
  cursor: pointer;
}
.lightbox-hero {
  padding: 12vh 2vw;
  max-width: 65vw;
}
.lightbox-text {
  color: #fff;
  padding: 4vh 4vw 4vh 2vw;
  width: 25vw;
  overflow: scroll;
}
.lightbox-text h1 {
  padding-top: 5vh;
  font-size: 3em;
  font-weight: 400;
  line-height: 1;
}
.lightbox-exit {
  position: fixed;
  right: 3vw;
  top: 2vh;
  font-size: 40px;
  padding-right: 10px;
}
.lightbox-exit:hover {
  color: var(--main-green);
  cursor: pointer;
}
/* ----- MOBILE HOME ----- */
.small-home-nav img {
  width: 20px;
  height: 20px;
}
.small-home-nav img:hover {
  cursor: pointer;
}
.small-home-nav {
  padding: 5vh 10vw 2vh;
  width: 80vw;
  position: static;
}
.small-home-body {
  padding: 3vh 10vw;
  font-size: 22px;
}
.small-home-body div {
  padding-bottom: 2vh;
}
/* ---- MOBILE PROJECTS ---- */
.small-projects-body {
  background: black;
  color: #fff;
  font-family: 'Apercu Regular';
  text-align: center;
}
.small-projects-body h3 {
  padding: 4vh 0;
  font-size: 24px;
}
.small-projects-container {
  display: grid;
  grid-template-columns: 40% 40%;
  justify-content: center;
  grid-gap: 1vh 2vw;
  color: #000;
  padding-bottom: 5vh;
}
.small-projects-container div {
  height: 130px;
  width: 130px;
  border-radius: 100%;
  justify-self: center;
  display: flex;
  align-items: center;
  justify-content: center;
}
.smallRogue:hover, .smallFindTables:hover, .smallQueertrip:hover, .smallWatch:hover, .smallBelen:hover, .smallAnna:hover {
  color: #fff;
  background-color: #000;
  border: 1px solid #fff;
  cursor: pointer;
}
.smallRogue {
  background-color: var(--main-red);
}
.smallQueertrip {
  background-color: rgb(242, 106, 106);
}
.smallWatch {
  background-color: rgb(140, 215, 146);
}
.smallFindTables {
  background-color: rgb(252, 164, 61);
}
.smallBelen {
  background-color: var(--main-green);
}
.smallAnna {
  background-color: rgb(153, 167, 255);
}
.smallRogue h4:hover, .smallFindTables h4:hover, .smallQueertrip h4:hover, .smallWatch h4:hover, .smallBelen h4:hover, .smallAnna h4:hover {
  border: none;
}
.small-projects-container div h4 {
  width: 100px;
  background-color: inherit;
}

/* ------ MEDIA QUERIES ------ */

/* ---- MOBILE ---- */

@media screen and (min-width: 1700px) {
  body {
    font-size: 21px;
  }
  #pac img, .ghost img {
    height: 65px;
  }
  #pacdies img {
    height: 75px;
  }
  .cherry img {
    width: 53px;
  }
  .space {
    width: 20px;
  }
  .eaten {
    width: 30px;
  }
}
@media screen and (min-width: 1500px) {
  body {
    font-size: 20px;
  }
  #pac img, .ghost img {
    height: 60px;
  }
  #pacdies img {
    height: 68px;
  }
  .cherry img {
    width: 43px;
  }
  .space {
    width: 8px;
  }
  .eaten {
    width: 20px;
  }
}

@media screen and (max-width: 1200px) {
  #world {
    font-size: 40px;
  }
  #pac img, .ghost img {
    height: 40px;
  }
  #pacdies img {
    height: 46px;
  }
  .cherry img {
    width: 35px;
  }
}
@media screen and (max-width: 1000px) {
  #pac img, .ghost img {
    height: 28px;
  }
  #pacdies img {
    height: 34px;
  }
  .cherry img {
    width: 20px;
  }
  #world {
    font-size: 30px;
  }
  .space {
    width: 10px;
  }
  .eaten {
    width: 15px;
  }
}
@media screen and (min-width: 769px) {
  .home-small {
    display: none;
  }
}
@media screen and (max-width: 768px) {
  /* hide world */
  .home-small {
    display: inline;
  }
  .home-main {
    display: none;
  }
  /* project layout */
}

